--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -3,6 +3,7 @@ name: Run Trading Bot
 on:
   schedule:
     - cron: '* * * * *'  # Uruchamia się co minutę
+  workflow_dispatch:      # Dodajemy możliwość ręcznego uruchomienia
 
 jobs:
   run-bot:
