--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -4,10 +4,14 @@ on:
   schedule:
     - cron: '*/5 * * * *'  # Uruchamia się co 5 minut
   workflow_dispatch:      # Pozwala na ręczne uruchomienie
+  push:                  # Uruchamia się przy każdym push
+  pull_request:          # Uruchamia się przy pull requestach
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     
     steps:
     - uses: actions/checkout@v2
