--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,27 +1,19 @@
 name: Run Trading Bot
 
 on:
-  workflow_dispatch:      # Tylko ręczne uruchomienie
-  push:                  # I przy push
+  schedule:
+    - cron: '*/5 * * * *'
+  workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v2
-    
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - uses: actions/setup-python@v2
       with:
         python-version: '3.9'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    
-    - name: Run bot
-      run: python trading_bot.py
+    - run: pip install -r requirements.txt
+    - run: python trading_bot.py
       env:
         BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
